# crypto-aodv

./: CMakeLists.txt  script.py
aodv_bridge/: ns3_helpers.cpp
auth/: auth_manager.cpp  auth_messages.h
crypto/: hkdf.h  icrypto.h  sodium_crypto.cpp
metrics/: metrics_collector.cpp
results/20251106-195225/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results/20251106-195911/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results/20251106-200153/: metrics_details.csv  metrics_node_details.csv  metrics_summary.csv  summary.txt
results/20251106-200409/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results/20251106-200457/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results/20251106-200633/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results/20251106-212840/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results/20251113-113157/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results/20251113-122522/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-122737/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-122853/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-123030/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-123117/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-123220/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-125650/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-130102/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-130210/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-130454/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-131430/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-132749/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-133929/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-150955/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-151042/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-151151/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-161625/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-161711/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-161752/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251113-174914/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_energy/20251114-065209/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_final/20251113-172912/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_final/20251113-173011/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_final/20251113-173153/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_final/20251113-173254/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_final/20251113-173409/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_final/20251113-174028/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_final/20251113-174115/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_final/20251113-175028/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_final/20251113-180102/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_large/20251116-185929/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_large/20251116-190045/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_large/20251116-190202/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_large/20251116-190403/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_large/20251116-190658/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_large/20251116-191006/: metrics_node_details.csv  metrics_summary.csv  summary.txt
results_large/20251116-191415/: metrics_node_details.csv  metrics_summary.csv  summary.txt
simulations/: auth_scenario.cc  uav_data_scenario.cc
tests/: auth_flow_test.cpp  crypto_test.cpp
tools/: run-sim.sh
